# tft

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
gtest/: CMakeLists.txt  test_dyadicfilter.cpp  test_polygonregion.cpp  test_stftmoment.cpp  test_stfttransformer.cpp  test_wavelettransformer.cpp  test_waveletvoice.cpp  test_waveletvoice_buffered.cpp  test_waveletvoice_unbuffered.cpp
include/tft/: ConfinedGaussian.h  ConfinedGaussianWaveletVoice.h  DyadicFilter.h  PolygonRegion.h  PolygonRegionVertical.h  RealFFTf.h  Region.h  StftCalculator.h  StftMoment.h  StftTransformer.h  TimeFrequencyCalculator.h  TimeFrequencyTransformer.h  WaveletCalculator.h  WaveletContainer.h  WaveletTransformer.h  WaveletVoice.h  WaveletVoiceUnbuffered.h  tft.h  version.h
src/: CMakeLists.txt  ConfinedGaussian.cpp  ConfinedGaussianWaveletVoice.cpp  ConfinedGaussianWaveletVoice.h  DyadicFilter.cpp  DyadicFilter.h  PolygonRegion.cpp  PolygonRegionVertical.cpp  RealFFTf.cpp  StftCalculator.cpp  StftCalculator.h  StftMoment.cpp  StftTransformer.cpp  TimeFrequencyCalculator.h  WaveletCalculator.cpp  WaveletCalculator.h  WaveletContainer.cpp  WaveletTransformer.cpp  WaveletVoice.cpp  WaveletVoice.h  WaveletVoiceUnbuffered.cpp  WaveletVoiceUnbuffered.h  version.h.in
src/include/tft/: ConfinedGaussianWaveletVoice.h  DyadicFilter.h  RealFFTf.h  StftCalculator.h  TftDefines.h  TimeFrequencyCalculator.h  WaveletCalculator.h  WaveletVoice.h  WaveletVoiceUnbuffered.h
test/: CMakeLists.txt  main.cpp
